Fix issue with not showing first level of navigation

--- a/src/components/offcanvas-navigation/offcanvas-navigation.scss
+++ b/src/components/offcanvas-navigation/offcanvas-navigation.scss
@@ -58,6 +58,7 @@ $offcanvas-navigation_product-qty-color: $color_text-500 !default;
         -webkit-overflow-scrolling: touch;
         display: none;
 
+        &--level_0,
         &--current,
         &--active {
             display: block;
